--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h2>Other</h2>
     <ul>
         <li>
-            <a href="./public/Hobbies.html">My Hobbies</a> 
+            <a href="./public/hobbies.html">My Hobbies</a> 
         </li>
         <li>
             <a href="./public/contact.html">Contact</a> 
